Внесены правки в стили

--- a/index.html
+++ b/index.html
@@ -155,13 +155,11 @@
             </div>
         </section>
 
-    <div class="footer-overlay"></div>
-  </div>
-
-  <!-- Page content -->
+        <!-- Page content -->
   <section class="client-instructions">
     <div class="container">
-      <section class="register-user" style="margin-top: 30px;">
+      <!-- <section class="register-user" style="margin-top: 30px;"> -->
+      <section class="register-user">
         <div class="container">
             <div class="doc">
                 <!--<div class="h1-with-progress-bar seller">
@@ -277,8 +275,6 @@
                     </fieldset>
                 </form>
 
-
-
                 <form id="codeForm">
                     <div class="errorFieldCode"></div>
                     <div class="message-send message-send-email">
@@ -306,16 +302,18 @@
                     </div>
                 </form>
 
-
-
             </div>
         </div>
       </section>
     </div>
   </section>
 
+    <div class="footer-overlay"></div>
+  </div>
+
+
   <!-- Page footer -->
-  <footer class="page-footer">
+  <footer class="footer">
     <div class="container">
       <div class="columns">
         <div class="first column">
