Подключены стили промосайта, внесены правки в стили страницы

--- a/index.html
+++ b/index.html
@@ -29,9 +29,15 @@
   <link rel="stylesheet" href="styles/theme-1.0.css"> -->
   <!-- <link rel="stylesheet" href="styles/header_footer_styles.css">
   <link rel="stylesheet" href="styles/header_footer_styles_display.css"> -->
-  <link rel="stylesheet" href="styles/registration_seller.css">
-  <link rel="stylesheet" href="styles/theme.min.css">
+  <!-- <link rel="stylesheet" href="styles/front.min.css"> -->
+  <!-- <link rel="stylesheet" href="styles/theme.min.css"> -->
   
+  <!-- <link rel="stylesheet" href="styles/front.css">
+  <link rel="stylesheet" href="styles/front-disp.css">
+  <link rel="stylesheet" href="styles/main.css"> -->
+  <link rel="stylesheet" href="styles/front.min.css">
+  <link rel="stylesheet" href="styles/registration_seller.css">
+   
   <!--[if lt IE 9]>
   <script src="..."></script>
   <![endif]-->
@@ -41,8 +47,8 @@
 <body cz-shortcut-listen="true">
   
   <!-- Page header -->
-  <div class="main">
-            <section class="header">
+  <div class="main_pkp">
+            <!-- <section class="header">
             <div class="container">
                 <a href="https://promodev.pokupo.ru/" title="Pokupo.ru" class="logo"></a>
                 <div class="menu-login">
@@ -58,12 +64,12 @@
                         <i class="icon icon-menu"></i>Меню
                     </span>
                     <style>
-        .menu__item a {
+                    .menu__item a {
             color: black;
-        }
-    </style>
-    <ul class="menu b-navigation">
-        <li class="menu__item with-submenu">
+                    }
+                </style>
+                <ul class="menu b-navigation">
+                    <li class="menu__item with-submenu">
             <a href="https://promodev.pokupo.ru/" target="">
                 <span>Платформа</span>
             </a>
@@ -83,13 +89,13 @@
                     </ul>
                 </li>
             </ul>
-        </li>
-        <li class="menu__item with-submenu">
+                    </li>
+                    <li class="menu__item with-submenu">
             <a href="https://promodev.pokupo.ru/rates" target="" class="">
                 <span>Тарифы</span>
             </a>
-        </li>
-        <li class="menu__item with-submenu">
+                    </li>
+                    <li class="menu__item with-submenu">
             <a href="https://promodev.pokupo.ru/events" target="" class="">
                 <span>Компания</span>
             </a>
@@ -123,13 +129,13 @@
                     </ul>
                 </li>
             </ul>
-        </li>
-        <li class="menu__item with-submenu">
+                    </li>
+                    <li class="menu__item with-submenu">
             <a href="https://promodev.pokupo.ru/partners" target="" class="">
                 <span>Партнеры</span>
             </a>
-        </li>
-        <li class="menu__item with-submenu">
+                    </li>
+                    <li class="menu__item with-submenu">
             <a href="https://promodev.pokupo.ru/faq" target="" class="">
                 <span>Помощь</span>
             </a>
@@ -149,11 +155,161 @@
                     </ul>
                 </li>
             </ul>
-        </li>
-    </ul>                
-    <div class="submenu-bg"></div>
+                    </li>
+                </ul>                
+                <div class="submenu-bg"></div>
+            </div>
+                    </section> -->
+
+  <section class="header">
+                <div class="container">
+                    <a href="/" title="Pokupo.ru" class="logo"></a>
+                    <div class="menu-login">
+                        <div class="logged-in">
+                            <a href="https://seller.pokupo.ru/login" class="icon-user circle-btn" title="Кабинет продавца"></a>
+                            <a href="https://seller.pokupo.ru/user/reg_seller/" class="btn btn-sm"><i class="icon icon-store--small"></i>Открыть магазин</a>
+                        </div>
+                    </div>
+                                        <input type="checkbox" class="toggleNav-ico" id="toggleNav-ico">
+                    <label id="toggleNav" for="toggleNav-ico"><i class="icon icon-menu"></i>Меню</label>
+                        
+<ul class="menu b-navigation">
+                                                            <li class="menu__item with-submenu active">
+                <a href="/" class=" active">
+                    <span>Платформа</span>
+                </a>
+                                                                    <ul class="submenu ">
+                                    <li class="submenu__item with-submenu">
+                            <a href="/about">
+                    <span>О проекте</span>
+                </a>
+                <ul class="submenu">
+                                    </ul>
+                    </li>
+                        <li class="submenu__item with-submenu">
+                            <a href="/shop">
+                    <span>Торговый портал</span>
+                </a>
+                <ul class="submenu">
+                                    </ul>
+                    </li>
+                        <li class="submenu__item with-submenu">
+                            <a href="/irkeventday">
+                    <span>Irk-Event-Day2016</span>
+                </a>
+                <ul class="submenu">
+                                    </ul>
+                    </li>
+                    </ul>
+            </li>
+                                                <li class="menu__item">
+                <a href="/rates">
+                    <span>Тарифы</span>
+                </a>
+            </li>
+                                                <li class="menu__item with-submenu">
+                <a href="/events">
+                    <span>Компания</span>
+                </a>
+                                                                    <ul class="submenu ">
+                                    <li class="submenu__item with-submenu">
+                            <a href="/events">
+                    <span>События</span>
+                </a>
+                <ul class="submenu">
+                                    </ul>
+                    </li>
+                        <li class="submenu__item with-submenu">
+                            <a href="/aboutus">
+                    <span>О нас</span>
+                </a>
+                <ul class="submenu">
+                                    </ul>
+                    </li>
+                        <li class="submenu__item with-submenu">
+                            <a href="/community">
+                    <span>Сообщество</span>
+                </a>
+                <ul class="submenu">
+                                    </ul>
+                    </li>
+                        <li class="submenu__item with-submenu">
+                            <a href="/blog">
+                    <span>Блог</span>
+                </a>
+                <ul class="submenu">
+                                    </ul>
+                    </li>
+                        <li class="submenu__item with-submenu">
+                            <a href="/comments">
+                    <span>Отзывы</span>
+                </a>
+                <ul class="submenu">
+                                    </ul>
+                    </li>
+                    </ul>
+            </li>
+                                                <li class="menu__item">
+                <a href="/partners">
+                    <span>Партнеры</span>
+                </a>
+            </li>
+                                                <li class="menu__item with-submenu">
+                <a href="/faq">
+                    <span>Помощь</span>
+                </a>
+                                                                    <ul class="submenu ">
+                                    <li class="submenu__item with-submenu">
+                            <a href="/faq">
+                    <span>Вопросы и ответы</span>
+                </a>
+                <ul class="submenu">
+                                    </ul>
+                    </li>
+                        <li class="submenu__item with-submenu">
+                            <a href="https://help.pokupo.ru/" target="_blank">
+                    <span>Техническая поддержка</span>
+                </a>
+                    </li>
+                        <li class="submenu__item with-submenu">
+                            <a href="/webinar_list">
+                    <span>Вебинары</span>
+                </a>
+                <ul class="submenu">
+                                    </ul>
+                    </li>
+                        <li class="submenu__item with-submenu">
+                            <a href="/lessons">
+                    <span>Курс обучения</span>
+                </a>
+                <ul class="submenu">
+                                    </ul>
+                    </li>
+                    </ul>
+            </li>
+            </ul>
+
+                    <div class="submenu-bg"></div>
+                </div>
+            </section>
+                            <div class="search-wrap orange">
+    <div class="container">
+        <input class="search-btn" id="search-btn" type="checkbox">
+        <label class="search-btn-label" for="search-btn"><a href="#" title="Поиск по сайту"></a></label>
+        <section class="orange search promo">
+            <div class="container">
+                <div class="b-search">
+                    <form action="/search" method="get">
+                    <div class="b-search-holder">
+                        <input type="search" placeholder="Поиск по сайту..." class="b-search__input" name="q" required="required" value="">
+                    </div>
+                    <button type="submit" class="b-search__button">Найти</button>
+                    </form>
+                </div>
             </div>
         </section>
+    </div>
+</div>
 
         <!-- Page content -->
   <section class="client-instructions">
@@ -313,7 +469,7 @@
 
 
   <!-- Page footer -->
-  <footer class="footer">
+  <!-- <footer class="footer">
     <div class="container">
       <div class="columns">
         <div class="first column">
@@ -381,7 +537,60 @@
         </div>
       </div>
     </div>
-  </footer>
+  </footer> -->
+
+  <footer class="footer">
+        <div class="container">
+            <div class="columns">
+    <div class="first column">
+        <div class="content">
+            <ul>
+                <li><span class="contact"><i class="contact-icon copyright"></i>Pokupo.ru&nbsp;2014</span></li>
+                <li><a href="mailto:support@pokupo.ru" title="E-Mail" class="contact"><i class="contact-icon email"></i>support@pokupo.ru</a></li>
+                <li><a href="skype:pokupo.ru?chat" onclick="return skypeCheck()" title="Skype" class="contact"><i class="contact-icon skype"></i>pokupo.ru</a></li>
+            </ul>
+        </div>
+    </div>
+    <div class="fourth column">
+        <div class="content">
+            <ul class="social">
+                <li><a href="https://vk.com/pokupo" target="_blank" title="Вконтакте" class="social__icon vk"></a></li>
+                <li><a href="https://twitter.com/pokupo_ru" target="_blank" title="Твиттер" class="social__icon tw"></a></li>
+                <li><a href="/blog" target="_blank" title="Блог" class="social__icon lj"></a></li>
+                <li><a href="http://habrahabr.ru/users/pokupo/" target="_blank" title="Хабрахабр" class="social__icon hh"></a></li>
+                <li><a href="https://groups.google.com/d/forum/pokupo_ru" target="_blank" title="Гугл-плюс" class="social__icon gp"></a></li>
+            </ul>
+        </div>
+    </div>
+    <div class="second column">
+        <div class="content">
+            <ul>
+                <li><a href="https://help.pokupo.ru/knowledgebase.php" title="База знаний">База знаний</a></li>
+                <li><a href="https://help.pokupo.ru/" title="Техническая поддержка">Техническая поддержка</a></li>
+                <li><a href="/sitemap" title="Оставить отзыв">Карта сайта</a></li>
+            </ul>
+        </div>
+    </div>
+    <div class="third column">
+        <div class="content">
+            <ul>
+                <li><a href="/rules" title="Пользовательское соглашение">Пользовательское соглашение</a></li>
+                <li><a href="/police" title="Правила конфиденциальности"> Правила конфиденциальности</a></li>
+                <li><a href="/refund" title="Политика возврата платежей"> Политика возврата платежей</a></li>
+            </ul>
+        </div>
+    </div>
+    <!-- <div id="paymentLogo" style="clear: both; padding-top: 30px; margin-bottom:-22px">
+        <img src="https://pokupo.ru/uploads/images/pimgpsh_fullsize_distr.jpg" alt="платёжные системы для интернет-магазина">
+    </div> -->
+</div>
+
+
+        </div>
+    </footer>
+    <!-- Back to top -->
+       <a href="#" class="back-to-top" title="Наверх" style="display: block;">наверх</a>
+    <!-- /Back to top -->
 
   <script src="scripts/jquery-ui.js"></script>
   <script src="scripts/jquery-1.js"></script>
@@ -392,3 +601,4 @@
 
 </body>
 </html>
+                    
