Внесены правки в стили header

--- a/index.html
+++ b/index.html
@@ -170,6 +170,7 @@
                             <a href="https://seller.pokupo.ru/user/reg_seller/" class="btn btn-sm"><i class="icon icon-store--small"></i>Открыть магазин</a>
                         </div>
                     </div>
+                    <div class="page-header__line"></div>
                                         <input type="checkbox" class="toggleNav-ico" id="toggleNav-ico">
                     <label id="toggleNav" for="toggleNav-ico"><i class="icon icon-menu"></i>Меню</label>
                         
