--- a/index.html
+++ b/index.html
@@ -593,11 +593,11 @@
        <a href="#" class="back-to-top" title="Наверх" style="display: block;">наверх</a>
     <!-- /Back to top -->
 
-  <!-- <script src="scripts/jquery-ui.js"></script> -->
+  <script src="scripts/jquery-ui.js"></script>
   <script src="scripts/jquery-1.js"></script>
-  <!-- <script src="scripts/jquery.colorbox-min.js"></script>
+  <script src="scripts/jquery.colorbox-min.js"></script>
   <script src="scripts/jquery.multiple.select.js"></script>
-  <script src="scripts/i18n/jquery.ui.datepicker-ru.js"></script> -->
+  <script src="scripts/i18n/jquery.ui.datepicker-ru.js"></script>
   <script src="scripts/main.js"></script>
 
 </body>
