--- a/index.html
+++ b/index.html
@@ -237,12 +237,12 @@
                                         <div class="error emailError"></div>
                                     </div>
 
-                                    <div class="input-holder">
+                                    <!-- <div class="input-holder">
                                         <div rel="tooltip" title="Телефон для связи" class="tooltip__trigger">?</div>
                                         <div class="placeholder" id="placeholder-phone"></div>
                                         <input type="tel" name="phone" value="" placeholder="Номер телефона (начиная с 7)" class="block-input" onblur="isPhoneCorrect()" onfocus="onFocusField('phone')">
                                         <div class="error phoneError"></div>
-                                    </div>
+                                    </div> -->
                                 </div>
 
                             </div>
@@ -252,6 +252,13 @@
                                                         <div class="showLink">Дополнительные данные (необязательно)<span class="iconOpenClose iconClose"></span></div>
                             <div id="nonrequired-fields" style="display: none;">
                                 <div class="b-wizard__step-content">
+
+                                  <div class="input-holder">
+                                        <div rel="tooltip" title="Телефон для связи" class="tooltip__trigger">?</div>
+                                        <div class="placeholder" id="placeholder-phone"></div>
+                                        <input type="tel" name="phone" value="" placeholder="Номер телефона (начиная с 7)" class="block-input" onblur="isPhoneCorrect()" onfocus="onFocusField('phone')">
+                                        <div class="error phoneError"></div>
+                                    </div>
 
                                     <div class="input-holder">
                                         <div rel="tooltip" title="Название магазина, который будет создан для вас (сможете поменять в дальнейшем)" class="tooltip__trigger">?</div>
